# gv-terminal

./: Makefile.am  Makefile.in  README  configure  configure.ac  configure~
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
data/: gv-terminal.desktop
src/: config.c  config.h  main.c  settings.c  settings.h  terminal.c  terminal.h
